<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f6f6f9"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="50dp"
    tools:context="com.androidigniter.loginandregistration.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_marginBottom="80dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="85dp"
            android:layout_height="63dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/logosh" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:gravity="center|start"
            android:text="GAMBERO"
            android:textAllCaps="true"
            android:textColor="#363949"
            android:textSize="34sp"
            android:textStyle="bold" />
    </LinearLayout>

    <EditText
        android:id="@+id/etLoginUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/whiteCardColor"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColorHint="#7D8DA1" />


    <EditText
        android:id="@+id/etLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@android:color/white"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColorHint="#7D8DA1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#7380ec"
        android:text="@string/sign_in"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/not_having_account"
        android:textColor="#363949" />

    <Button
        android:id="@+id/btnLoginRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginTop="30dp"
        android:background="#7380ec"
        android:text="@string/register"
        android:textColor="@android:color/white" />


</LinearLayout>
